# digital-yapper

./: Dockerfile  LICENSE  README.md  check_db.sh  docker-compose.yml
backend/: .env.example  conversations.db  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: chat.py  data.py
backend/app/core/: utils.py
backend/app/database/: connection.py  models.py
backend/app/models/: chat.py  data_model.py
backend/app/services/: chat_service.py  mock_policies.py  user_info.py
backend/tests/: conftest.py  test_api.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: DataForm.jsx  LandingPage.jsx  NursingChat.js  ResponseDisplay.jsx
frontend/src/pages/: ChatHistory.js  ChatPage.js  TestEndpoint.jsx
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
